# login-with-flask

./: Dockerfile  README.md  api-cors.kongplugin.yaml  auth.ksvc.yaml  build.sh  get-access-toke-by-refresh-token.sh  get-access-token-by-code.sh  get-authorize-url.sh  pyproject.toml  token-introspect.sh  token-revocation.sh  wsgi.py
app/: __init__.py  config.py  extensions.py  models.py  proxy.py
app/api/: __init__.py
app/auth/: __init__.py  form.py
app/domain/: user.py
app/main/: __init__.py
app/oauth/: __init__.py  endpoints.py  grants.py  server.py
app/repositories/: user.py
app/templates/: index.html
app/templates/_layouts/: base.html
app/templates/auth/: login.html  register.html
app/templates/main/: protected.html  public.html  session.html
app/templates/oauth/: authorize.html
docker/: entrypoint.sh
migrations/versions/: 6f9dc370378c_.py  8caf46c7b7c3_.py  d42396e6a685_initial_migration.py  ec2e1d4bbee7_.py
