[tool.poetry]
name = "login-with-flask"
version = "0.1.1"
description = ""
authors = ["Pyunghyuk Yoo <62975595+purple-lion@users.noreply.github.com>"]
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.7.7"
Flask = "^2.0.2"
Flask-Login = "^0.5.0"
Flask-SQLAlchemy = "^2.5.1"
psycopg2-binary = "^2.9.3"
requests = "^2.27.1"
Flask-Migrate = "^3.1.0"
Flask-Admin = "^1.6.0"
PyJWT = "^2.3.0"
Authlib = "^0.15.5"
Flask-WTF = "^1.0.0"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
